Thu Sep 10 arton
 *ext/load.c
	Correct previous code (always reload jvm if OSX < Snow Leopard)
	Clear DL's exception if success
 *ext/rjb.c
	RJB_VERSION -> 1.1.9
 *ext/rjbexception.c
	fit arguments for rb_raise to shut warning down
Mon Sep 07 arton
 *ext/load.c
	Check no compat type dylib after loading was failed (for Snow Leopard)
 *ext/rjb.c
	RJB_VERSION -> 1.1.8
Sun Feb 15 arton
 *test/test/rb
	add $KCODE and magic comment for iconv
 *ext/rjb.c
	RJB_VERSION -> 1.1.7
Thu Feb 5 kuwa1
 *test/Test.java
 *test/test.rb
	add tests(Umlaut)
 *ext/rjb.c
 *ext/load.c
 	fix for ruby19
Sun Nov 16 arton
 *ext/load.c	
	apply hpux patch, contributed by Ittay Dror. thanks
Tue Aug 26 arton
 *ext/load.c, rjb.c, rjb.h
	export safe_funcall under the prefix 'rjb'.
	calling DL with rb_protect for avoiding exception.
Mon Aug 25 arton
 *ext/load.c
	Fix checking the result for loading alternate_jvm_type.
	(patch from Kumar, thanks)
Thu Aug 14 arton
 *ext/rjb.c, load.c, etc
	change comment line // -> /* */ because AIX's compiler
	add _AIX for load.c (this patch from Ittay Dror, thanks)
 *ext/load.c
	add ALT_JVM_TYPE for alternative jvm directory (by Kumar)
Sun Jul 13 arton
 *ext/rjb.c
	display warning when Rjb load jvm implicitly if $DEBUG or $VERBOSE.
Mon May 26 arton
 *ext/rjb.c
	correct char primitive conversion for Bigendian machine.
	use macroes for loading classes
 *ext/load.c
	adjust OS X's directory
 *ext/extconf.rb	
	adjust OS X's directory if Home exists	
Thu Mar 27 arton
 *ext/rjb.c
	mark version 1.1.4 for the next release.
 *test/test.rb
	remove unload, because it fails. 
	It's more important to assert each functions.
Thu Mar 27 arton
 *ext/riconv.c
	activate conv tables for getenv configuration.
Tue Mar 5 Kuwashima
 *ext/rjb.c
 *ext/rjb.h
 *ext/rjbexception.c
 	add auto load method.
Tue Mar  4 Kuwashima
 *ext/rjbexception.c
 *ext/rjb.c
 *test/test.rb
 	clear(ignore) exception in current java thread, before some operation.
 *ext/rjbexception.c
 *ext/rjb.c