@@ -1,3 +1,9 @@
+Sun Oct 11 arton
+ *ext/extconf.rb
+	add double quotation around include path for mingw compiler, original patched by Roger Pack (thanks)
+	remove double quotaion around java_home variable for existing checking by File.directoy?
+ *rjb.rake
+	adding mingw support for the older version compatibility checking
 Thu Sep 10 arton
  *ext/load.c
 	Correct previous code (always reload jvm if OSX < Snow Leopard)
